--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -160,6 +160,7 @@ h1 {
     height: 100%;
     background-color: #00274f;
     margin: 0;
+    border-radius: 2vw;
 }
 
 #whitebg {
@@ -167,5 +168,6 @@ h1 {
     height: 100%;
     background-color: #ffffff;
     margin: 0;
+    border-radius: 2vw;
 }
 
